--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,9 @@ spring:
 server:
   port: 8081
 
+
+jwt:
+  auth:
+    converter:
+      resource-id: omar-rest-api
+      principle-attribute: preferred_username
